--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">TodoApp</string>
+
+    <string name="title_app">Bienvenido Ray</string>
+    <string name="title_categories">Categorias</string>
+    <string name="title_tasks">Tareas</string>
+    <string name="dialog_task">Añade una tarea</string>
+
 </resources>
